--- a/living-nfts/package.json
+++ b/living-nfts/package.json
@@ -14,6 +14,7 @@
     "@zoralabs/zora-1155-contracts": "^2.13.2",
     "axios": "^1.8.4",
     "ethers": "^6.13.5",
+    "ipfs-http-client": "^60.0.1",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
